容器化bug排查内容调整

--- a/docker/记一个服务容器化改造中遇到的问题.md
+++ b/docker/记一个服务容器化改造中遇到的问题.md
@@ -51,7 +51,8 @@ $mail->Send();
 * 注：sendmail是centos5.x默认的MTA，而postfix是centos6.x默认的MTA，前向兼容
 
 而在奇效中，sendmail服务是通过postfix提供的，postfix启动后会启动SMTP服务器监听25端口, PHPMailer也是通过本地SMTP完成邮件投递的。看起来都是用的postfix提供的服务，为什么还会出现一个可以发送而另一个不可以呢？
-在生产环境中检查下postfix服务是否正常启动时发现：
+
+在生产环境中检查postfix服务是否正常启动时发现：
 ```shell
 # 前端容器
 [root@qixiao-frontend-db5cb9f9f-cwbm8 /]# ps -ef | grep postfix
@@ -87,7 +88,8 @@ service postfix start
 exec /usr/local/nginx/sbin/nginx -c /usr/local/nginx/conf/nginx.conf -g "daemon off;"
 ```
 因为前后端使用的基础镜像中都已经预安装了postfix，导致前端镜像在启动时没有因为postfix启动失败而报错，从而将问题掩盖了下来。将其从脚本中删除后，重新制作镜像并更新后即恢复正常。
-因为k8s的pod中推荐使用共享网络的方式进行pod内容器间交互，后续也将代码中所有的mail()方式发送邮件修改为PHPMailer发送来避免可能遇到的类似问题。
+
+因为k8s的pod中推荐使用共享网络的方式进行pod内容器间交互，后续也将代码中所有的`mail()`方式发送邮件修改为PHPMailer发送来避免可能遇到的类似问题。
 
 
 ## 总结
